--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -17,4 +17,12 @@ result_path: submission
 processed_path: data/processed
 raw_path: data/raw
 cache_path: data/cache
-data_path: data/raw/train_data/dummy.npy
+data_path: data/raw/test_soundscapes/
+species_path: data/raw/train_audio/
+result_path: submission
+
+# Kaggle paths
+#data_path: kaggle/input/birdclef-2024/test_soundscapes/
+#species_path: kaggle/input/birdclef-2024/train_audio/
+#result_path: kaggle/working
+
