--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -12,7 +12,8 @@ defaults:
 processed_path: data/processed
 raw_path: data/raw
 cache_path: data/cache
-data_path: data/raw/train_data/dummy.npy
+#data_path: data/raw/train_data/dummy.npy
+data_path: data/raw/train_audio
 
 # Do this if you want train full.
 test_size: 0
