--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -14,6 +14,7 @@ raw_path: data/raw
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/train_audio
+metadata_path: data/raw/train_metadata.csv
 
 # Do this if you want train full.
 test_size: 0
@@ -23,6 +24,6 @@ scorer:
   name: accuracy
 splitter:
   _target_: sklearn.model_selection.KFold
-  n_splits: 0 # Set to 0 if you want train full.
+  n_splits: 5 # Set to 0 if you want train full.
   shuffle: false
 allow_multiple_instances: true
