--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -23,7 +23,8 @@ scorer:
   _target_: src.scoring.accuracy.Accuracy # Add scorer
   name: accuracy
 splitter:
-  _target_: sklearn.model_selection.KFold
+  _target_: sklearn.model_selection.StratifiedKFold
   n_splits: 5 # Set to 0 if you want train full.
-  shuffle: false
+  shuffle: true
+  random_state: 42
 allow_multiple_instances: true
