--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,4 +54,7 @@ repos:
           - wandb
           - randomname
           - coloredlogs
+          - dask
+          - librosa
+          - distributed
         args: [ --disallow-any-generics, --disallow-untyped-defs, --disable-error-code=import-untyped]
