--- a/conf/model/run.yaml
+++ b/conf/model/run.yaml
@@ -4,7 +4,7 @@ defaults:
 
 x_sys:
   steps:
-    - _target_: src.modules.transformation.nan_to_zero.NanToZero
+    - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
       years: ["2024"]
 y_sys:
 
