--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ dependencies = [
     "plotly>=5.18.0",
 
     # PyTorch
-    "torch==2.1.2+cu118",
-    "torchaudio==2.1.2+cu118",
-    "torchvision==0.16.2+cu118",
+    "torch>=2.1.2",
+    "torchaudio>=2.1.2",
+    "torchvision>=0.16.2",
 
     # Dash
     "dash>=2.14.2",
