--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch>=2.1.2+cu118
-torchaudio>=2.1.2+cu118
-torchvision>=0.16.2+cu118
+torch==2.2.2+cu118
+torchaudio==2.2.2+cu118
+torchvision==0.17.2+cu118
 annotated_types==0.6.0
 coloredlogs==15.0.1
 epochalyst==0.3.2
@@ -10,6 +10,6 @@ kaggle==1.6.11
 numpy==1.26.4
 randomname==0.2.1
 tqdm==4.66.2
-wandb>=0.16.4
+wandb==0.16.4
 
 -e ./
