--- a/conf/model/run.yaml
+++ b/conf/model/run.yaml
@@ -22,15 +22,16 @@ train_sys:
         labeler:
           _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
       n_folds: 2 # 0 for train full,
-      epochs: 20
+      epochs: 2
       patience: 10
-      batch_size: 32
+      batch_size: 128
       model:
-        _target_: src.modules.training.models.mlp.MLP
-        input_dim: 2
-        output_dim: 1
+        _target_: epochalyst.pipeline.model.training.models.timm.Timm
+        in_channels: 1
+        out_channels: 182
+        model_name: "efficientnet_b0"
       criterion:
-        _target_: torch.nn.BCELoss
+        _target_: torch.nn.MSELoss
       optimizer:
         _target_: functools.partial
         _args_:
