--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -9,11 +9,11 @@ defaults:
 #    PATHS    #
 #             #
 ###############
-processed_path: data/processed
-raw_path: data/raw
+processed_path: data/processed/
+raw_path: data/raw/
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
-data_path: data/raw/train_audio
+data_path: data/raw/train_audio/
 metadata_path: data/raw/train_metadata.csv
 
 # Do this if you want train full.
