--- a/conf/model/run.yaml
+++ b/conf/model/run.yaml
@@ -24,6 +24,10 @@ train_sys:
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
           threshold: 4.0
+      dataloader_args:
+        num_workers: 2
+        prefetch_factor: 4
+        persistent_workers: true
       n_folds: 2 # 0 for train full,
       epochs: 2
       patience: 10
