--- a/conf/model/run.yaml
+++ b/conf/model/run.yaml
@@ -13,17 +13,19 @@ train_sys:
     - _target_: src.modules.training.main_trainer.MainTrainer
       year: "2024"
       dataset_args:
-        sampler: 
+        sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
           length: 160000
         to_2d:
-          _target_: src.modules.training.datasets.to_2d.spec.Spec
-          spec:
-            _target_: functools.partial 
-            _args_:
-              - _target_: hydra.utils.get_class
-                path: torchaudio.transforms.Spectrogram
-          output_shape: [224,224]
+          # _target_: src.modules.training.datasets.to_2d.spec.Spec
+          # spec:
+          #   _target_: functools.partial
+          #   _args_:
+          #     - _target_: hydra.utils.get_class
+          #       path: torchaudio.transforms.Spectrogram
+          # output_shape: [224,224]
+          _target_: src.modules.training.datasets.to_2d.reshape.Reshape
+          shape: [400,400]
         labeler:
           _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
         filter_:
@@ -35,13 +37,13 @@ train_sys:
         persistent_workers: true
       n_folds: 2 # 0 for train full,
       epochs: 2
-      patience: 10
+      patience: 1
       batch_size: 128
       model:
         _target_: epochalyst.pipeline.model.training.models.timm.Timm
         in_channels: 1
         out_channels: 182
-        model_name: "efficientnet_b0"
+        model_name: "vgg13"
       criterion:
         _target_: torch.nn.MSELoss
       optimizer:
