--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -22,6 +22,8 @@ test_size: 0.2
 scorer:
   _target_: src.scoring.rocauc.ROCAUC # Add scorer
   name: rocauc
+  grade_threshold: 4.0
+  only_primary: true
 splitter:
   _target_: sklearn.model_selection.StratifiedKFold
   n_splits: 5 # Set to 0 if you want train full.
