--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,11 @@ numpy==1.26.4
 randomname==0.2.1
 tqdm==4.66.2
 wandb==0.16.4
+timm==0.9.16
+scikit-learn==1.4.2
+librosa==0.10.1
+dask==2024.4.2
+dask-expr==1.0.12
+
 
 -e ./
