--- a/conf/model/run.yaml
+++ b/conf/model/run.yaml
@@ -17,29 +17,29 @@ train_sys:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
           length: 160000
         to_2d:
-          #_target_: src.modules.training.datasets.to_2d.spec.Spec
-          #spec:
-#            _target_: functools.partial
-#            _args_:
-#              - _target_: hydra.utils.get_class
-#                path: torchaudio.transforms.MelSpectrogram #nnAudio.features.mel.MelSpectrogram
-#          output_shape: [224,224]
-          # scale:
-          #   _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
+          _target_: src.modules.training.datasets.to_2d.spec.Spec
+          spec:
+            _target_: functools.partial
+            _args_:
+              - _target_: hydra.utils.get_class
+                path: torchaudio.transforms.MelSpectrogram #nnAudio.features.mel.MelSpectrogram
+          output_shape: [224,224]
+          scale:
+             _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
 
-         _target_: src.modules.training.datasets.to_2d.reshape.Reshape
-         shape: [400,400]
+#         _target_: src.modules.training.datasets.to_2d.reshape.Reshape
+#         shape: [400,400]
         labeler:
           _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
           threshold: 4.0
       dataloader_args:
-        num_workers: 32
-        prefetch_factor: 7
+        num_workers: 8
+        prefetch_factor: 2
         persistent_workers: true
       n_folds: 5 # 0 for train full,
-      epochs: 1
+      epochs: 50
       patience: 10
       batch_size: 128
       model:
@@ -48,7 +48,7 @@ train_sys:
         out_channels: 182
         model_name: "efficientnet_b0"
       criterion:
-        _target_: torch.nn.MSELoss
+        _target_: src.modules.training.losses.focal_loss.FocalLoss
       optimizer:
         _target_: functools.partial
         _args_:
