--- a/conf/model/b0_aug.yaml
+++ b/conf/model/b0_aug.yaml
@@ -33,7 +33,7 @@ train_sys:
           _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
-          threshold: 0
+          threshold: 4.5
         aug_1d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
           x_transforms:
@@ -61,10 +61,11 @@ train_sys:
       patience: 15
       batch_size: 64
       model:
-        _target_: src.modules.training.models.timm.Timm
+        _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
         out_channels: 182
         model_name: "efficientnet_b0"
+        activation: "sigmoid"
       scheduler:
         _target_: functools.partial
         _args_:
