--- a/conf/model/focal.yaml
+++ b/conf/model/focal.yaml
@@ -57,25 +57,16 @@ train_sys:
         prefetch_factor: 2
         persistent_workers: True
       n_folds: 5 # 0 for train full,
-      epochs: 5
+      epochs: 50
       patience: 15
       batch_size: 64
       model:
-        _target_: src.modules.training.models.timm.Timm
+        _target_: src.modules.training.models.timm.Timm  #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
         out_channels: 182
         model_name: "efficientnet_b0"
-      scheduler:
-        _target_: functools.partial
-        _args_:
-          - _target_: hydra.utils.get_class
-            path: timm.scheduler.cosine_lr.CosineLRScheduler
-        warmup_t: 2
-        warmup_lr_init: 1e-5
-        t_initial: 50
-        cycle_limit: 1
       criterion:
-        _target_: src.modules.training.losses.focal_loss.FocalLoss
+        _target_: src.modules.training.losses.focal_loss.FocalLossBCE
       optimizer:
         _target_: functools.partial
         _args_:
