Add partial notebook for retrieving the metadata of the BirdCLEF2024 dataset from Xeno-Canto

--- a/.gitignore
+++ b/.gitignore
@@ -168,8 +168,10 @@ submission/dependencies
 outputs
 
 tm
-
-data/processed
 data/raw
+data/processed
+data/final
+notebooks/dataset
+
 
 submission/submission.csv
