--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: focal # Add models or ensembles
+  - model: b0_aug # Add models or ensembles
   - wandb: train
 
 ###############
@@ -11,10 +11,11 @@ defaults:
 ###############
 processed_path: data/processed/
 raw_path: data/raw/
+years: [2024, 2023]
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
-data_path: data/raw/train_audio/
-metadata_path: data/raw/train_metadata.csv
+data_path: data/raw/2024/train_audio/
+metadata_path: data/raw/2024/train_metadata.csv
 
 # Do this if you want train full.
 test_size: 0
