--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: b0_aug_weighted # Add models or ensembles
+  - model: b0_aug_sampled # Add models or ensembles
   - wandb: train
 
 ###############
@@ -22,7 +22,7 @@ test_size: 0.2
 scorer:
   _target_: src.scoring.rocauc.ROCAUC # Add scorer
   name: rocauc
-  grade_threshold: 4.5
+  grade_threshold: 0
   only_primary: true
 splitter:
   _target_: sklearn.model_selection.StratifiedKFold
