--- a/conf/model/b0_aug_sampled.yaml
+++ b/conf/model/b0_aug_sampled.yaml
@@ -56,6 +56,7 @@ train_sys:
         num_workers: 8
         prefetch_factor: 2
         persistent_workers: True
+      weights_path: data/raw/sample_weights_2024.npy #Set weights for the sampler
       n_folds: 5 # 0 for train full,
       epochs: 50
       patience: 15
