--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -12,6 +12,7 @@ defaults:
 processed_path: data/processed/
 raw_path: data/raw/
 cache_path: data/cache
+years: ["2023", "2024"]
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/train_audio/
 metadata_path: data/raw/train_metadata.csv
