--- a/conf/model/b0_aug.yaml
+++ b/conf/model/b0_aug.yaml
@@ -5,13 +5,13 @@ defaults:
 x_sys:
   steps:
     - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["2024"]
+      years: ["2024", "2023"]
 y_sys:
 
 train_sys:
   steps:
     - _target_: src.modules.training.main_trainer.MainTrainer
-      year: "2024"
+      year: union_2023_2024
       dataset_args:
         sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -42,8 +42,8 @@ train_sys:
               shift_limit: 0.5
             - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
               p: 0.8
-              low: 0.2
-              high: 0.8
+              low: 1.5
+              high: 2
           xy_transforms:
             - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.CutMix1D
               p: 0.5
@@ -58,14 +58,14 @@ train_sys:
         num_workers: 16
         prefetch_factor: 1
         persistent_workers: false
-      n_folds: 0 # 0 for train full,
+      n_folds: 5 # 0 for train full,
       epochs: 50
       patience: 14
       batch_size: 64
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 182
+        out_channels: 432
         model_name: "efficientnet_b0"
         activation: "sigmoid"
       scheduler:
