--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -11,14 +11,14 @@ defaults:
 ###############
 processed_path: data/processed/
 raw_path: data/raw/
-years: [2024, 2023]
+years: ["2024", "2023"]
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/2024/train_audio/
 metadata_path: data/raw/2024/train_metadata.csv
 
 # Do this if you want train full.
-test_size: 0
+test_size: 0.2
 
 scorer:
   _target_: src.scoring.rocauc.ROCAUC # Add scorer
@@ -32,7 +32,8 @@ splitter:
     _args_:
       - _target_: hydra.utils.get_class
         path: sklearn.model_selection.StratifiedKFold
-  n_splits: 0 # Set to 0 if you want train full.
+  n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
+  years: ["union_2023_2024"]
 allow_multiple_instances: true
