--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_cv
   - hydra/logging
-  - model: hugo # Add models or ensembles
+  - model: b0_aug # Add models or ensembles
   - wandb: train
 
 ###############
@@ -23,8 +23,14 @@ scorer:
   grade_threshold: 0
   only_primary: true
 splitter:
-  _target_: sklearn.model_selection.StratifiedKFold
+  _target_: src.setup.splitter.Splitter
+  splitter:
+    _target_: functools.partial
+    _args_:
+      - _target_: hydra.utils.get_class
+        path: sklearn.model_selection.StratifiedKFold
   n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
+  years: ["2023","2024"]
 allow_multiple_instances: true
