--- a/conf/model/eca-l0-butter.yaml
+++ b/conf/model/eca-l0-butter.yaml
@@ -2,16 +2,15 @@ _target_: epochalyst.pipeline.model.model.ModelPipeline
 _convert_: partial
 
 
-x_sys:
-  _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
-  title: Preprocessing pipeline
-  steps:
-  - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-    years:
-    - '2024'
-  - _target_: src.modules.transformation.x.butter.ButterFilter
-    years:
-    - '2024'
+#x_sys:
+#  _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
+#  title: Preprocessing pipeline
+#  steps:
+#  - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
+#    years:
+#    - '2024'
+
+x_sys: null
 y_sys: null
 
 
@@ -24,23 +23,15 @@ train_sys:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
         length: 160000
-      to_2d:
-        _target_: src.modules.training.datasets.to_2d.spec.Spec
-        spec:
-          _target_: functools.partial
-          _args_:
-          - _target_: hydra.utils.get_class
-            path: torchaudio.transforms.MelSpectrogram
-        output_shape:
-        - 256
-        - 256
-        scale:
-          _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       labeler:
         _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
       filter_:
         _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
         threshold: 0
+      process_delayed:
+        - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
+        - _target_: src.modules.transformation.x.butter.ButterFilter
+          lower: 1250
       aug_1d:
         _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
         x_transforms:
@@ -54,6 +45,19 @@ train_sys:
           p: 0.5
         - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.MixUp1D
           p: 0.5
+      to_2d:
+        _target_: src.modules.training.datasets.to_2d.spec.Spec
+        spec:
+          _target_: functools.partial
+          _args_:
+          - _target_: hydra.utils.get_class
+            path: torchaudio.transforms.MelSpectrogram
+        output_shape:
+        - 256
+        - 256
+        f_min: 1250
+        scale:
+          _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       aug_2d:
         _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
         xy_transforms:
@@ -64,7 +68,7 @@ train_sys:
       prefetch_factor: 2
       persistent_workers: true
     n_folds: 5
-    epochs: 75
+    epochs: 50
     patience: 15
     batch_size: 64
     model:
