--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,4 +57,6 @@ repos:
           - dask
           - librosa
           - distributed
+          - matplotlib
+          - seaborn
         args: [ --disallow-any-generics, --disallow-untyped-defs, --disable-error-code=import-untyped]
