--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -13,9 +13,8 @@ processed_path: data/processed/
 raw_path: data/raw/
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
-data_path: data/raw/train_audio/
-metadata_path: data/raw/train_metadata.csv
-
+data_path: data/raw/2024/train_audio/
+metadata_path: data/raw/2024/train_metadata.csv
 scorer:
   _target_: src.scoring.rocauc.ROCAUC # Add scorer
   name: rocauc
