--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -13,8 +13,8 @@ processed_path: data/processed/
 raw_path: data/raw/
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
-data_path: data/raw/train_audio/
-metadata_path: data/raw/train_metadata.csv
+data_path: data/raw/2024/train_audio/
+metadata_path: data/raw/2024/train_metadata.csv
 
 # Do this if you want train full.
 test_size: 0.2
