--- a/conf/model/b0_aug.yaml
+++ b/conf/model/b0_aug.yaml
@@ -34,6 +34,8 @@ train_sys:
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
           threshold: 0
+        process_delayed:
+          - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
         aug_1d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
           x_transforms:
@@ -58,8 +60,8 @@ train_sys:
         num_workers: 16
         prefetch_factor: 1
         persistent_workers: false
-      n_folds: 0 # 0 for train full,
-      epochs: 1
+      n_folds: 5 # 0 for train full,
+      epochs: 5
       patience: 14
       batch_size: 128
       model:
