Add basic rye setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,15 @@ dependencies = [
     "librosa>=0.10.1",
 ]
 
+[tool.rye]
+managed = true
+lock-with-sources = true
+
+[[tool.rye.sources]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/torch_stable.html"
+type = "find-links"
+
 
 [tool.mypy]
 exclude = ["external/", "venv/", ".cache"]
