--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,9 +47,9 @@ repos:
           - numpy
           - epochalyst
           - tqdm
-          - torch
-          - torchaudio
-          - torchvision
+          - torch==2.2.2
+          - torchvision==0.17.2
+          - torchaudio==2.2.2
           - hydra-core
           - wandb
           - randomname
