--- a/conf/model/effb0.yaml
+++ b/conf/model/effb0.yaml
@@ -55,8 +55,8 @@ train_sys:
     dataloader_args:
       num_workers: 8
       prefetch_factor: 2
-      persistent_workers: false
-    n_folds: 5
+      persistent_workers: true
+    n_folds: 0
     epochs: 50
     patience: 15
     batch_size: 64
@@ -64,14 +64,14 @@ train_sys:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
       out_channels: 182
-      model_name: convnext_tiny
+      model_name: efficientnet_b0
       activation: sigmoid
     scheduler:
       _target_: functools.partial
       _args_:
       - _target_: hydra.utils.get_class
         path: timm.scheduler.cosine_lr.CosineLRScheduler
-      warmup_t: 3
+      warmup_t: 2
       warmup_lr_init: 1.0e-05
       t_initial: 50
       cycle_limit: 1
@@ -82,7 +82,7 @@ train_sys:
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
-      lr: 0.0005
+      lr: 0.001
   - _target_: src.modules.training.postprocessing.set_to_0.SetTo0
   - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
     smooth_factor: 0.75
