--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,47 +13,25 @@ license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    # Machine Learning Basics
     "numpy>=1.26.2",
     "pandas>=2.1.4",
     "tqdm>=4.60.0",
     "epochalyst>=0.3.2",
-    # Visualizations
     "seaborn>=0.13.0",
     "matplotlib>=3.8.2",
     "plotly>=5.18.0",
-    # PyTorch
     "torch==2.2.2+cu121",
     "torchvision==0.17.2+cu121",
     "torchaudio==2.2.2+cu121",
-    # Dash
-    "dash>=2.14.2",
-    "dash-bootstrap-components>=1.5.0",
-    "dash-bootstrap-templates>=1.1.1",
-    # Dask
     "dask>=2024.4.0",
     "dask-expr>=1.0.12",
-    # pre-commit & MyPy
-    "pre-commit>=3.6.0",
-    "mypy>=1.7.1",
     "typing_extensions>=4.9.0",
     "annotated-types>=0.6.0",
-    "pandas-stubs>=2.2.0.240218",
-    "traitlets>=5.14.2",
-    # Hydra
     "hydra-core>=1.3.2",
-    # Weights & Biases
     "wandb>=0.16.2",
     "randomname>=0.2.1",
-    # Logging
     "coloredlogs>=15.0.1",
-    # Notebooks
-    "notebook>=7.0.6",
-    "jupyter>=1.0.0",
-    "ipykernel>=6.27.1",
-    # Music & Sound
     "librosa>=0.10.1",
-
     "onnx>=1.16.0",
     "onnxruntime>=1.17.3",
     "kornia>=0.7.2",
@@ -63,6 +41,14 @@ dependencies = [
 [tool.rye]
 managed = true
 lock-with-sources = true
+dev-dependencies = [
+    "pre-commit>=3.7.0",
+    "notebook>=7.0.6",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.27.1",
+    "pytest>=8.1.1",
+    "pytest-cov>=5.0.0",
+]
 
 [[tool.rye.sources]]
 name = "pytorch"
