--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ dev-dependencies = [
     "ipykernel>=6.27.1",
     "pytest>=8.1.1",
     "pytest-cov>=5.0.0",
+    "kaggle>=1.6.12",
+    "xeno-canto>=3.0",
 ]
 
 [[tool.rye.sources]]
