removed augs on cuda
It isn't that good for models like convnext. On the GPU it has to happen sequentially, so aug model aug model instead of augs happening asynchronously in parallel in the cpu. For small models it is a little faster but rly ugly refactor

--- a/conf/model/eca_l0.yaml
+++ b/conf/model/eca_l0.yaml
@@ -59,12 +59,12 @@ train_sys:
               p: 0.8
       dataloader_args:
         num_workers: 16
-        prefetch_factor: 1
-        persistent_workers: False
-      n_folds: 5 # 0 for train full,
+        prefetch_factor: 2
+        persistent_workers: false
+      n_folds: 0 # 0 for train full,
       epochs: 50
       patience: 15
-      batch_size: 128
+      batch_size: 64
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
