Add Keep2024Species Postprocessing block

--- a/conf/model/convnext-post-add.yaml
+++ b/conf/model/convnext-post-add.yaml
@@ -7,13 +7,13 @@ x_sys:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
     years:
     - '2024'
-    - '2024add'
+    - '2023'
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.main_trainer.MainTrainer
-    year: 'union_2024_2024add'
+    year: 'union_2024_2023'
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -64,7 +64,7 @@ train_sys:
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
-      out_channels: 182
+      out_channels: 432
       model_name: convnext_tiny
       activation: sigmoid
     scheduler:
@@ -84,9 +84,9 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-  - _target_: src.modules.training.postprocessing.set_to_0.SetTo0
   - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
     smooth_factor: 0.75
+  - _target_: src.modules.training.postprocessing.keep_2024_species.Keep2024Species
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
