--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ requires-python = ">=3.10"
 dependencies = [
     "numpy>=1.26.2",
     "pandas>=2.1.4",
+    "scikit-learn>=1.4.2",
     "tqdm>=4.60.0",
     "epochalyst>=0.3.2",
     "seaborn>=0.13.0",
