--- a/conf/model/b0_aug.yaml
+++ b/conf/model/b0_aug.yaml
@@ -5,13 +5,13 @@ defaults:
 x_sys:
   steps:
     - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["2024", "2023"]
+      years: ["kenya"]
 y_sys:
 
 train_sys:
   steps:
     - _target_: src.modules.training.main_trainer.MainTrainer
-      year: "union_2024_2023"
+      year: "kenya"
       dataset_args:
         sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -67,7 +67,7 @@ train_sys:
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 432
+        out_channels: 176
         model_name: "efficientnet_b0"
         activation: "sigmoid"
       scheduler:
