--- a/conf/model/eca_l0_dropout.yaml
+++ b/conf/model/eca_l0_dropout.yaml
@@ -5,13 +5,13 @@ defaults:
 x_sys:
   steps:
     - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["2024"]
+      years: ["kenya"]
 y_sys:
 
 train_sys:
   steps:
     - _target_: src.modules.training.main_trainer.MainTrainer
-      year: "2024"
+      year: "kenya"
       dataset_args:
         sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -68,7 +68,7 @@ train_sys:
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 182
+        out_channels: 176
         model_name: "eca_nfnet_l0"
         activation: "sigmoid"
         drop_rate: 0.5
