--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,8 @@ dev-dependencies = [
     "pytest-cov>=5.0.0",
     "kaggle>=1.6.12",
     "xeno-canto>=3.0",
+    "tensorflow[and-cuda]>=2.8.0",
+    "tensorflow-hub>=0.12.0",
 ]
 
 [[tool.rye.sources]]
