added sumix augmentation
Without the loop the casting uses 10GB extra memory per batch for each batch, which makes no sense.

--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: convnext-post-mfcc # Add models or ensembles
+  - model: convnext-post-mfcc-sumix # Add models or ensembles
   - wandb: train
 
 ###############
