--- a/conf/model/convnext-post-power-2.yaml
+++ b/conf/model/convnext-post-power-2.yaml
@@ -83,7 +83,9 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
+  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
   - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
+    power: 2
     smooth_factor: 0.75
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
