--- a/conf/model/convnext-green.yaml
+++ b/conf/model/convnext-green.yaml
@@ -5,13 +5,13 @@ defaults:
 x_sys:
   steps:
     - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["2024","esc50"]
+      years: ["2024","green"]
 y_sys:
 
 train_sys:
   steps:
     - _target_: src.modules.training.main_trainer.MainTrainer
-      year: "union_2024_esc50"
+      year: "union_2024_green"
       dataset_args:
         sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -42,6 +42,9 @@ train_sys:
               shift_limit: 0.5
             - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
               p: 0.5
+          xy_transforms:
+            - _target_: src.modules.training.augmentations.sumix.Sumix
+              p: 1
         aug_2d:
       dataloader_args:
         num_workers: 16
@@ -54,7 +57,7 @@ train_sys:
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 182
+        out_channels: 183
         model_name: "convnext_tiny"
         activation: "sigmoid"
       scheduler:
